--- a/fuze.css
+++ b/fuze.css
@@ -27,6 +27,7 @@
     box-shadow: 0px 0px 1px #d9534f;
     background-color: #d9534f;
     border: 1px solid transparent;
+    font-weight: bold;
 }
 
 .red:hover {
