--- a/fuze.css
+++ b/fuze.css
@@ -33,6 +33,6 @@
 .red:hover {
     -webkit-transition: all .3s linear;
     transition: all .3s linear;
-    box-shadow: 0px 0px 10px #DA3725;
-    background-color: #DA3725;
+    box-shadow: 0px 0px 10px #ffffff;
+    background-color: #ffffff;
 }
