--- a/fuze.css
+++ b/fuze.css
@@ -24,8 +24,8 @@
     color: white;
     -webkit-transition: all .3s linear;
     transition: all .3s linear;
-    box-shadow: 0px 0px 1px #d9534f;
-    background-color: #d9534f;
+    box-shadow: 0px 0px 1px #f9f9f9;
+    background-color: #f9f9f9;
     border: 1px solid transparent;
     font-family: "Verdana";
     font-weight: bold;
@@ -34,6 +34,6 @@
 .red:hover {
     -webkit-transition: all .3s linear;
     transition: all .3s linear;
-    box-shadow: 0px 0px 10px #ffffff;
-    background-color: #ffffff;
+    box-shadow: 0px 0px 10px #DA3725;
+    background-color: #DA3725;
 }
