--- a/fuze.css
+++ b/fuze.css
@@ -24,8 +24,8 @@
     color: white;
     -webkit-transition: all .3s linear;
     transition: all .3s linear;
-    box-shadow: 0px 0px 1px #f9f9f9;
-    background-color: #f9f9f9;
+    box-shadow: 0px 0px 1px #ed422f;
+    background-color: #ed422f;
     border: 1px solid transparent;
     font-family: "Verdana";
     font-weight: bold;
