--- a/fuze.css
+++ b/fuze.css
@@ -24,8 +24,8 @@
     color: white;
     -webkit-transition: all .3s linear;
     transition: all .3s linear;
-    box-shadow: 0px 0px 1px #dd3e2c;
-    background-color: #dd3e2c;
+    box-shadow: 0px 0px 1px #E0412F;
+    background-color: #E0412F;
     border: 1px solid transparent;
     font-family: "Verdana";
     font-weight: bold;
