--- a/fuze.css
+++ b/fuze.css
@@ -34,6 +34,6 @@
 .red:hover {
     -webkit-transition: all .3s linear;
     transition: all .3s linear;
-    box-shadow: 0px 0px 10px #DA3725;
-    background-color: #DA3725;
+    box-shadow: 0px 0px 10px #D32F1D;
+    background-color: #D32F1D;
 }
