--- a/fuze.css
+++ b/fuze.css
@@ -9,56 +9,25 @@
  * fuze.css Copyright Aiden Bai 2017.
  */
 
-btn,
-btn::after {
-  -webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-  -o-transition: all 0.3s;
-	transition: all 0.3s;
-}
-
-button {
-  background: none;
-  border: 3px solid #fff;
-  border-radius: 5px;
-  color: #fff;
-  display: block;
-  font-size: 1.6em;
-  font-weight: bold;
-  margin: 1em auto;
-  padding: 2em 6em;
-  position: relative;
-  text-transform: uppercase;
-}
-
-btn::before,
-btn::after {
-  background: #fff;
-  content: '';
-  position: absolute;
-  z-index: -1;
-}
-
-.btn:hover {
-  color: #2ecc71;
-}
-
-.btn-ani {
-  overflow: hidden;
-}
-
-.btn-ani::after {
-  /*background-color: #f00;*/
-  height: 100%;
-  left: -35%;
-  top: 0;
-  transform: skew(50deg);
-  transition-duration: 0.6s;
-  transform-origin: top left;
-  width: 0;
-}
-
-.btn-ani:hover:after {
-  height: 100%;
-  width: 135%;
+.plus{
+    position: relative;
+    z-index: 1;
+    width: 80px;
+    height: 80px;
+    color: #1a1a1a;
+    background: #ed1c5b;
+    border-radius: 50%;
+    border: none;
+    transition: box-shadow 400ms cubic-bezier(.2,0,.7,1), transform 200ms cubic-bezier(.2,0,.7,1);
+    &:after{
+        content: "+";
+        font-size: 2.5em;
+        line-height: 1.1em;
+    }
+    &:hover{
+        transform: rotate(45deg);
+        box-shadow: 0 0 1px 15px rgba(#8A3B58, 0.4),
+        0 0 1px 30px rgba(#8A3B58, 0.1),
+        0 0 1px 45px rgba(#8A3B58, 0.1);
+    }
 }
