--- a/fuze.css
+++ b/fuze.css
@@ -9,6 +9,29 @@
  * fuze.css Copyright Aiden Bai 2017.
  */
 
+.button__holder{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    background-color: #1a1a1a;
+    &:after{
+        content: "";
+        position: absolute;
+        z-index: 0;
+        top: 0; right: 0; bottom: 0; left: 0;
+        background: rgba(#1a1a1a, 0.7);
+    }
+    h2{
+        margin: {right: 1em;}
+        text-align: center;
+        color: #8A3B58;
+    }
+}
+
 .plus{
     position: relative;
     z-index: 1;
