--- a/fuze.css
+++ b/fuze.css
@@ -9,48 +9,32 @@
  * fuze.css Copyright Aiden Bai 2017.
  */
 
-.button__holder{
-    position: relative;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    background-color: #1a1a1a;
-    &:after{
-        content: "";
-        position: absolute;
-        z-index: 0;
-        top: 0; right: 0; bottom: 0; left: 0;
-        background: rgba(#1a1a1a, 0.7);
-    }
-    h2{
-        margin: {right: 1em;}
-        text-align: center;
-        color: #8A3B58;
-    }
-}
+@import url(https://fonts.googleapis.com/css?family=Roboto:700);
+html, body{background : #FBC02D; font-family : Roboto; height: 100%; width: 100%; margin: 0;}
 
-.plus{
-    position: relative;
-    z-index: 1;
-    width: 80px;
-    height: 80px;
-    color: #1a1a1a;
-    background: #ed1c5b;
-    border-radius: 50%;
-    border: none;
-    transition: box-shadow 400ms cubic-bezier(.2,0,.7,1), transform 200ms cubic-bezier(.2,0,.7,1);
-    &:after{
-        content: "+";
-        font-size: 2.5em;
-        line-height: 1.1em;
-    }
-    &:hover{
-        transform: rotate(45deg);
-        box-shadow: 0 0 1px 15px rgba(#8A3B58, 0.4),
-        0 0 1px 30px rgba(#8A3B58, 0.1),
-        0 0 1px 45px rgba(#8A3B58, 0.1);
-    }
+#holder{
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  background: white;
+  padding: 10px;
+  width: 250px;
+  margin: 0 auto;
+  position: relative;
+  top: 50%;
+  transform: translateY(-65%);
+  box-shadow: 0px 3px 8px rgba(0,0,0,0.25);
+  border-radius: 2px;
+}
+.button {
+  background: #3D4C53;
+  margin : 20px auto;
+  width : 200px;
+  height : 50px;
+  overflow: hidden;
+  text-align : center;
+  transition : .2s;
+  cursor : pointer;
+  border-radius: 3px;
+  box-shadow: 0px 1px 2px rgba(0,0,0,.2);
 }
