--- a/fuze.less
+++ b/fuze.less
@@ -1,12 +1,12 @@
 /*
- * fuze.css
+ * fuze.less
  * Version: 0.1
  * Author: Aiden Bai
 
  * Made available under a MIT License:
  * https://www.opensource.org/licenses/mit-license.php
 
- * fuze.css Copyright Aiden Bai 2017.
+ * fuze.less Copyright Aiden Bai 2017.
  */
 
 html,  {
