--- a/fuze.scss
+++ b/fuze.scss
@@ -1,58 +1,64 @@
 /*
- * fuze.scss
+ * fuze.css
  * Version: 0.1
  * Author: Aiden Bai
 
  * Made available under a MIT License:
  * https://www.opensource.org/licenses/mit-license.php
 
- * fuze.scss Copyright Aiden Bai 2017.
+ * fuze.css Copyright Aiden Bai 2017.
  */
 
+body {
+	padding: 35vh 50px;
+	font-family: sans-serif;
+	text-align: center;
+}
+
+a {
+	text-decoration: none;
+	letter-spacing: 0.1em;
+}
+
 .btn {
-  position: relative;
-  font-size: 16px;
-  color: #fff;
-  text-decoration: none;
-  display: inline-block;
-  border: 3px solid #fff;
-  border-radius: 5px;
-  padding: 20px;
-  margin-top: 25px;
-  overflow:hidden;
-  font-family: Arial, sans-serif;
-  font-weight: 300;
-  transition: all 250ms ease-in-out;
-  
-  span {
-    position: relative;
-    z-index: 1;
-  }
-    
-   &:before {
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 200px;
-    height: 200px;
-    margin-left: -100px;
-    margin-top: -100px;
-    content: '';
-    border-color: #fff;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 100px;
-    transform-origin: center center;
-    transition: all 250ms ease-in-out;
-    box-sizing: border-box;
-  }
+	display: inline-block;
+	padding: 40px 60px;
+	position: relative;
+	z-index: 1;
+	overflow: hidden;
+	text-align: center;
+	background: #1be16b;
+	color: #fff;
+	line-height: 1;
+}
 
-  &:hover {
-    color: #a6cfe3;
+.btn > i {
+	width: 360px;
+	height: 360px;
+	position: absolute;
+	top: -40%;
+	left: 30%;
+	pointer-events: none;
+	z-index: -1;
+}
 
-    &:before {
-      border-width: 100px;
-    }
-  }
+.btn > i:before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	border-radius: 50%;
+	background: radial-gradient(ellipse at center, #02bbff 0, transparent 65%);
+	transition: 0.8s ease-in-out;
+}
+
+.btn:hover > i:before, .btn:focus > i:before {
+	transform: scale3d(1.5, 1.5, 1.5);
+	transition: 1s cubic-bezier(0.18, 0, 0, 0.995);
+}
+
+.btn:active > i:before {
+	transform: scale3d(2, 2, 2);
 }
