--- a/fuze.css
+++ b/fuze.css
@@ -9,56 +9,148 @@
  * fuze.css Copyright Aiden Bai 2017.
  */
 
-body {
-	padding: 35vh 50px;
-	font-family: sans-serif;
-	text-align: center;
+$dark-blue: #222;
+$green: #90feb5;
+$action-color: $green;
+
+* {
+  box-sizing: border-box;
 }
 
-a {
-	text-decoration: none;
-	letter-spacing: 0.1em;
+div{
+  display: block;
+  height: 100%;
+  animation: hue-rotate 10s linear infinite;
 }
 
-.btn {
-	display: inline-block;
-	padding: 40px 60px;
-	position: relative;
-	z-index: 1;
-	overflow: hidden;
-	text-align: center;
-	background: #1be16b;
-	color: #fff;
-	line-height: 1;
+.button {
+  -webkit-font-smoothing: antialiased;
+  background-color: $dark-blue;
+  border: none;
+  color: #fff;
+  display: inline-block;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight: 100;
+  text-decoration: none;
+  user-select: none;
+  letter-spacing: 1px;
+  color: white;
+  padding: 20px 40px;
+  text-transform: uppercase;
+  transition: all 0.1s ease-out;
+
+  &:hover {
+    background-color: $action-color;
+    color: #fff;
+  }
+  
+  &:active {
+    transform: scale(0.95);
+  }
+
+  &--bubble {
+    position: relative;
+    z-index: 2;
+    color: white;
+    background: none;
+
+    &:hover {
+      background: none;
+    }
+
+    &:hover + .button--bubble__effect-container .circle {
+      background: darken($action-color, 15%);
+    }
+
+    &:hover + .button--bubble__effect-container .button {
+      background: darken($action-color, 15%);
+    }
+
+    &:active + .button--bubble__effect-container {
+      transform: scale(0.95);
+    }
+
+    &__container {
+      position: relative;
+      display: inline-block;
+
+      .effect-button {
+        position: absolute;
+        width: 50%;
+        height: 25%;
+        top: 50%;
+        left: 25%;
+        z-index: 1;
+        transform: translateY(-50%);
+        background: $dark-blue;
+        transition: background 0.1s ease-out;
+      }
+    }
+  }
 }
 
-.btn > i {
-	width: 360px;
-	height: 360px;
-	position: absolute;
-	top: -40%;
-	left: 30%;
-	pointer-events: none;
-	z-index: -1;
+.button--bubble__effect-container {
+  position: absolute;
+  display: block;
+  width: 200%;
+  height: 400%;
+  top: -150%;
+  left: -50%;
+  -webkit-filter: url("#goo");
+  filter: url("#goo");
+  transition: all 0.1s ease-out;
+  pointer-events: none;
+
+  .circle {
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    border-radius: 15px;
+    background: $dark-blue;
+    transition: background 0.1s ease-out;
+
+    &.top-left {
+        top: 40%;
+        left: 27%;
+    }
+
+    &.bottom-right {
+        bottom: 40%;
+        right: 27%;
+    }
+  }
 }
 
-.btn > i:before {
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	border-radius: 50%;
-	background: radial-gradient(ellipse at center, #02bbff 0, transparent 65%);
-	transition: 0.8s ease-in-out;
+.goo {
+  position: absolute;
+  visibility: hidden;
+  width: 1px;
+  height: 1px;
 }
 
-.btn:hover > i:before, .btn:focus > i:before {
-	transform: scale3d(1.5, 1.5, 1.5);
-	transition: 1s cubic-bezier(0.18, 0, 0, 0.995);
+html, body {
+  width: 100%;
+  height: 100%;
+  text-align: center;
 }
 
-.btn:active > i:before {
-	transform: scale3d(2, 2, 2);
+.button--bubble__container {
+  top: 50%;
+  margin-top: -25px;
+}
+
+@keyframes hue-rotate {
+      from {
+        -webkit-filter: hue-rotate(0);
+        -moz-filter: hue-rotate(0);
+        -ms-filter: hue-rotate(0);
+        filter: hue-rotate(0);
+      }
+      to {
+        -webkit-filter: hue-rotate(360deg);
+        -moz-filter: hue-rotate(360deg);
+        -ms-filter: hue-rotate(360deg);
+        filter: hue-rotate(360deg);
+      }
 }
