--- a/fuze.scss
+++ b/fuze.scss
@@ -1,12 +1,12 @@
 /*
- * fuze.css
+ * fuze.scss
  * Version: 0.1
  * Author: Aiden Bai
 
  * Made available under a MIT License:
  * https://www.opensource.org/licenses/mit-license.php
 
- * fuze.css Copyright Aiden Bai 2017.
+ * fuze.scss Copyright Aiden Bai 2017.
  */
 
 $dark-blue: #222;
