--- a/fuze.css
+++ b/fuze.css
@@ -9,17 +9,21 @@
  * fuze.css Copyright Aiden Bai 2017.
  */
 
+.btn-rb {
+    animation: hue-rotate 10s linear infinite;
+}
+
 @keyframes hue-rotate {
-      from {
+    from {
         -webkit-filter: hue-rotate(0);
         -moz-filter: hue-rotate(0);
         -ms-filter: hue-rotate(0);
         filter: hue-rotate(0);
-      }
-      to {
+    }
+    to {
         -webkit-filter: hue-rotate(360deg);
         -moz-filter: hue-rotate(360deg);
         -ms-filter: hue-rotate(360deg);
         filter: hue-rotate(360deg);
-      }
+    }
 }
