--- a/fuze.css
+++ b/fuze.css
@@ -14,3 +14,9 @@
     opacity: 0.60;
     -webkit-backface-visibility: hidden
 }
+
+.w3-opacity-off,
+.w3-hover-opacity-off:hover {
+    opacity: 1;
+    -webkit-backface-visibility: hidden
+}
