--- a/fuze.css
+++ b/fuze.css
@@ -11,7 +11,7 @@
 
 .btn-1 {
   margin: .4em;
-  padding: 1em;
+  padding: .7em;
   cursor: pointer;
   background: #ececec;
   text-decoration: none;
