--- a/fuze.css
+++ b/fuze.css
@@ -13,7 +13,7 @@
   margin: .4em;
   padding: .7em;
   cursor: pointer;
-  background: #f44242;
+  background: #ececec;
   text-decoration: none;
   color: #666;
 }
